add tailwind configuration

--- a/index.html
+++ b/index.html
@@ -4,6 +4,10 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Pricing Table</title>
+    <!-- Load the latest Tailwind v4 via CDN with additional plugins -->
+    <script src="https://cdn.tailwindcss.com"></script>
   </head>
-  <body></body>
+  <body class="bg-sky-400 text-center p-10">
+    <h1>Pricing Table</h1>
+  </body>
 </html>
