update js and html with logic

--- a/index.html
+++ b/index.html
@@ -8,6 +8,56 @@
     <script src="https://cdn.tailwindcss.com"></script>
   </head>
   <body class="bg-sky-400 text-center p-10">
-    <h1>Pricing Table</h1>
+    <div class="flex">
+      <div class="bg-indigo-200 border-2 border-double">
+        <p id="title1" class="text-xl my-2">Pricing title</p>
+        <p id="cost1" class="text-5xl my-2">Pricing cost</p>
+        <p id="short-description1" class="text-sm my-2">
+          pricing short description
+        </p>
+        <p id="long-description1" class="text-l my-2">
+          pricing long description
+        </p>
+        <button
+          id="button-val1"
+          class="bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 border border-blue-700 rounded my-2"
+        >
+          Button
+        </button>
+      </div>
+      <div class="bg-indigo-200 border-2 border-double">
+        <p id="title2" class="text-xl my-2">Pricing title</p>
+        <p id="cost2" class="text-5xl my-2">Pricing cost</p>
+        <p id="short-description2" class="text-sm my-2">
+          pricing short description
+        </p>
+        <p id="long-description2" class="text-l my-2">
+          pricing long description
+        </p>
+        <button
+          id="button-val2"
+          class="bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 border border-blue-700 rounded my-2"
+        >
+          Button
+        </button>
+      </div>
+      <div class="bg-indigo-200 border-2 border-double">
+        <p id="title3" class="text-xl my-2">Pricing title</p>
+        <p id="cost3" class="text-5xl my-2">Pricing cost</p>
+        <p id="short-description3" class="text-sm my-2">
+          pricing short description
+        </p>
+        <p id="long-description3" class="text-l my-2">
+          pricing long description
+        </p>
+        <button
+          id="button-val3"
+          class="bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 border border-blue-700 rounded my-2"
+        >
+          Button
+        </button>
+      </div>
+    </div>
+    <script src="js/script.js"></script>
   </body>
 </html>
